--- a/Sequence Models.ipynb
+++ b/Sequence Models.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "42377d7b",
+   "id": "3dfd2a06",
    "metadata": {},
    "source": [
     "# Character level Language RNN"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "46a33f9a",
+   "id": "f103d29e",
    "metadata": {},
    "source": [
     "We can measure the quality of language model using Perplexity. Perplexity can be best understood as the harmonic mean of the number of real choices that we have when deciding which token to pick next.At the baseline, the model predicts a uniform distribution over all the available tokens of the vocabulary. In this case, the perplexity equals the number of unique tokens of the vocabulary. In fact, if we were to store the sequence without any compression, this would be the best we could do to encode it. Hence, this provides a nontrivial upper bound that any useful model must beat."
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "44363220",
+   "id": "7a277439",
    "metadata": {},
    "source": [
     "# Scratch Implementation"
@@ -26,48 +26,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "03cc815d",
+   "execution_count": 17,
+   "id": "c73c7daa",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "module 'd2l.torch' has no attribute 'load_data_time_machine'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_9416/2639922966.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[0md2l\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mtorch\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0md2l\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      6\u001b[0m \u001b[0mbatch_size\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mnum_steps\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;36m32\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m35\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 7\u001b[1;33m \u001b[0mtrain_iter\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mvocab\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0md2l\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mload_data_time_machine\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mbatch_size\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mnum_steps\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m: module 'd2l.torch' has no attribute 'load_data_time_machine'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import math\n",
     "import torch\n",
     "from torch import nn\n",
     "from torch.nn import functional as F\n",
     "from d2l import torch as d2l\n",
-    "batch_size, num_steps = 32, 35\n",
-    "train_iter, vocab = d2l.load_data_time_machine(batch_size, num_steps)"
+    "batch_size, num_steps = 32, 35"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "c9b3127e",
+   "execution_count": 9,
+   "id": "81126536",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[0, 1, 2, 3, 4],\n",
+      "        [5, 6, 7, 8, 9]])\n",
+      "tensor([[[1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
+      "          0, 0, 0, 0, 0],\n",
+      "         [0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
+      "          0, 0, 0, 0, 0]],\n",
+      "\n",
+      "        [[0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
+      "          0, 0, 0, 0, 0],\n",
+      "         [0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
+      "          0, 0, 0, 0, 0]],\n",
+      "\n",
+      "        [[0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
+      "          0, 0, 0, 0, 0],\n",
+      "         [0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
+      "          0, 0, 0, 0, 0]],\n",
+      "\n",
+      "        [[0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
+      "          0, 0, 0, 0, 0],\n",
+      "         [0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
+      "          0, 0, 0, 0, 0]],\n",
+      "\n",
+      "        [[0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
+      "          0, 0, 0, 0, 0],\n",
+      "         [0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
+      "          0, 0, 0, 0, 0]]])\n"
+     ]
+    }
+   ],
    "source": [
-    "F.one_hot(torch.tensor([0, 2]), len(vocab))\n",
+    "# F.one_hot(torch.tensor([0, 2]), len(vocab))\n",
     "X = torch.arange(10).reshape((2, 5))\n",
-    "F.one_hot(X.T, 28).shape"
+    "print(X)\n",
+    "F.one_hot(X.T, 28).shape\n",
+    "print(F.one_hot(X.T, 28))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5c67c9e4",
+   "id": "731f8707",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +114,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "01dcba06",
+   "id": "45164f77",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,13 +130,13 @@
     "        H = torch.tanh(torch.mm(X, W_xh) + torch.mm(H, W_hh) + b_h)\n",
     "        Y = torch.mm(H, W_hq) + b_q\n",
     "        outputs.append(Y)\n",
-    "    return torch.cat(outputs, dim=0), (H,)\n"
+    "    return torch.cat(outputs, dim=0), (H,)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "967737c2",
+   "id": "73bad493",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,7 +156,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c0aea5f0",
+   "id": "e6404804",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,11 +170,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "20d2cc74",
+   "id": "f36b86de",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def predict_ch8(prefix, num_preds, net, vocab, device): \n",
+    "def predict(prefix, num_preds, net, vocab, device): \n",
     "    \"\"\"Generate new characters following the `prefix`.\"\"\"\n",
     "    state = net.begin_state(batch_size=1, device=device)\n",
     "    outputs = [vocab[prefix[0]]]\n",
@@ -169,7 +191,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0304bdc8",
+   "id": "271aeddb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -179,7 +201,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "462edbe9",
+   "id": "557b3f07",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -198,7 +220,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "db448265",
+   "id": "65926358",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -228,7 +250,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4005cfd6",
+   "id": "d6d08737",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -239,7 +261,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cf45c514",
+   "id": "75ca2fa7",
    "metadata": {},
    "outputs": [],
    "source": [
